# fx-signal

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  POSTMORTEM.md  README.md  bot.js  check-liquidity.js  config.json  daily-check.js  package-lock.json  package.json  pyproject.toml  test-balance.js  test-ticker.js  test-webhook.js
.github/workflows/: deploy.yml
.tmp/: CLAUDE.md  task.md
bot/: .env.example  bot.js  config.example.toml  config.json  export-data.js  package-lock.json  package.json  pyproject.toml
bot/lib/: analysis.js  bitflyer.js  indicators.js  notify.js
bot/src/stella/: CLAUDE.md  __init__.py  config.py  main.py
bot/src/stella/api/: CLAUDE.md  __init__.py  server.py
bot/src/stella/backtest/: CLAUDE.md  __init__.py  runner.py
bot/src/stella/core/: CLAUDE.md  __init__.py  engine.py  portfolio.py  safety.py
bot/src/stella/exchange/: CLAUDE.md  __init__.py  base.py  bitbank.py  bybit.py
bot/src/stella/indicators/: CLAUDE.md  __init__.py  technical.py
bot/src/stella/notify/: CLAUDE.md  __init__.py  discord.py
bot/src/stella/strategies/: CLAUDE.md  __init__.py  base.py  trend.py
bot/strategies/: ema-trend.js  grid.js  rsi.js
bot/tests/: CLAUDE.md  conftest.py  test_indicators.py  test_portfolio.py  test_safety.py
bot/tests/test_strategies/: CLAUDE.md  test_trend.py
dashboard/: next.config.ts
dashboard/app/: page.tsx
dashboard/public/data/: portfolio.json  safety.json  stats.json  trades.json
docs/: CLAUDE.md  code-review.md  design.md
lib/: notify.js  safety.js
src/fx_signal/: config.py  main.py
src/fx_signal/backtest/: runner.py
src/fx_signal/data/: fetcher.py
src/fx_signal/judgment/: ai_filter.py
src/fx_signal/notify/: line.py  mac.py
src/fx_signal/signals/: base.py  ema_rsi.py  rsi_reversion.py
strategies/: grid.js
tests/: test_backtest.py  test_signals.py
v1/bot/: .env.example  bot.js  export-data.js  report.js  test-indicators.js
v1/bot/lib/: analysis.js  indicators.js
v1/bot/strategies/: ema-trend.js  rsi.js
v1/dashboard/app/: page.tsx
v1/dashboard/public/data/: portfolio.json  safety.json  stats.json
