[project]
name = "fx-signal"
version = "0.1.0"
description = "USD/JPY FXシグナル通知ボット"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
    "yfinance>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[project.scripts]
fx-signal = "fx_signal.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fx_signal"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
