[project]
name = "stella-trader"
version = "2.0.0"
description = "仮想通貨自動売買システム"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b1",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "apscheduler>=3.10.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
]
backtest = [
    "vectorbt>=0.26.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
stella = "stella.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
